Fixed form alignment in body

--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@ html {
 }
 
 body {
+  height: 100%;
+
   background-image: url("bg.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.15);
+  
 }
 
 .bg-author {
@@ -21,13 +24,13 @@ body {
   bottom: 6px;
 }
 .bg-author p {
-  color: #dbdbdb;
-  text-decoration-color: #dbdbdb;
+  color: #afafaf;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
 }
 
 form {
+  top:50%;
   border-radius: 15px;
   border-width: 1px;
   border-color: #ffffff6a;
@@ -35,11 +38,14 @@ form {
   width: 250px;
   height: 350px;
   background-color: rgba(0, 0, 0, 0.5);
-  margin: 0px auto;
   backdrop-filter: blur(10px);
   box-shadow: 0px 0px 20px 2px rgba(0,0,0,0.75);
 }
 
 .container {
-  padding-top: 50%;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
